[metadata]
name = asyncmock
author = Tim Savage
author-email = tim@savage.company
description = Extension to the standard mock framework to support support async
long-description = file: README.rst
long-description-content-type = text/x-rst
url = https://github.com/timsavage/asyncmock
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    testing
    mock
    asyncio
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = find_namespace:
test_suite = tests
setup_requires =
    pytest-runner
    setuptools >=38.3
install_requires =
    mock
tests_require =
    pytest
    pytest-asyncio
    pytest-cov

[options.packages.find]
include =
    asyncmock

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov=asyncmock

[check]
metadata = true
restructuredtext = true
strict = true
